--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     <meta
       name="description"
       property="og:description"
-      content="The official Powerball&#xAE; website. Get the winning numbers, watch the draw show, and find out just how big the jackpot has grown. Are you holding a winning Powerball ticket? Check your numbers here!"
+      content="Cheng Charlie Saephan and his wife are donating $500,000 to 500 random individuals across the U.S. and Europe, aiming to provide financial freedom and happiness to those in need. Their mission is to make the world a better place by offering support to those who deserve a fresh start. If you've been selected, you're part of an incredible transformation!"
     />
+
     <title>Home | Powerball</title>
 
     <!-- Open Graph Meta Tags -->
@@ -22,13 +23,10 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="The official Powerball&#xAE; website. Get the winning numbers, watch the draw show, and find out just how big the jackpot has grown. Are you holding a winning Powerball ticket? Check your numbers here!"
+      content="Cheng Charlie Saephan and his wife are donating $500,000 to 500 random individuals across the U.S. and Europe, aiming to provide financial freedom and happiness to those in need. Their mission is to make the world a better place by offering support to those who deserve a fresh start. If you've been selected, you're part of an incredible transformation!"
     />
     <meta property="og:site_name" content="Powerball" />
-    <meta
-      property="og:image"
-      content="https://cdn.powerball.com/v01/images/opengraph/powerball-logo-1200.webp"
-    />
+    <meta property="og:image" content="assets/img-7.webp" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_MX" />
 
