--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Home" />
-    <meta property="og:url" content="https://powerball-lilac.vercel.app/" />
+    <meta property="og:url" content="https://powerball-givebackwithcharlie.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
@@ -31,20 +31,20 @@
     <meta property="og:locale:alternate" content="es_MX" />
 
     <!-- Canonical and Alternate Links -->
-    <link rel="canonical" href="https://powerball-lilac.vercel.app/" />
+    <link rel="canonical" href="https://powerball-givebackwithcharlie.vercel.app/" />
     <link
       rel="alternate"
-      href="https://powerball-lilac.vercel.app/"
+      href="https://powerball-givebackwithcharlie.vercel.app/"
       hreflang="en-US"
     />
     <link
       rel="alternate"
-      href="https://powerball-lilac.vercel.app/es"
+      href="https://powerball-givebackwithcharlie.vercel.app/es"
       hreflang="es-MX"
     />
     <link
       rel="alternate"
-      href="https://powerball-lilac.vercel.app/"
+      href="https://powerball-givebackwithcharlie.vercel.app/"
       hreflang="x-default"
     />
 
@@ -174,7 +174,7 @@
       <div class="container-xxl">
         <a
           class="navbar-brand"
-          href="https://powerball-lilac.vercel.app/"
+          href="https://powerball-givebackwithcharlie.vercel.app/"
           rel="home"
           aria-label="Powerball"
         >
@@ -755,7 +755,7 @@
       <div class="container-xxl py-3">
         <nav class="navbar">
           <a
-            href="https://powerball-lilac.vercel.app/"
+            href="https://powerball-givebackwithcharlie.vercel.app/"
             rel="home"
             aria-label="Powerball"
             class="footer-brand"
