--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
     <title>Home | Powerball</title>
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:image" content="../assets/img-7.webp" />
+    <meta
+      property="og:image"
+      content="https://powerball-givebackwithcharlie.vercel.app/assets/img-7.webp"
+    />
     <meta property="og:title" content="Home" />
     <meta
       property="og:url"
@@ -30,7 +33,10 @@
       content="Cheng Charlie Saephan and his wife are donating $500,000 to 500 random individuals across the U.S. and Europe, aiming to provide financial freedom and happiness to those in need. Their mission is to make the world a better place by offering support to those who deserve a fresh start. If you've been selected, you're part of an incredible transformation!"
     />
     <meta property="og:site_name" content="Powerball" />
-    <meta property="og:image" content="../assets/img-7.webp" />
+    <meta
+      property="og:image"
+      content="https://powerball-givebackwithcharlie.vercel.app/assets/img-7.webp"
+    />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_MX" />
 
