--- a/public/index.html
+++ b/public/index.html
@@ -721,7 +721,7 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="idType">Identification Type*</label>
               <select id="idType" name="idType" required>
                 <option value="">Select ID Type</option>
@@ -733,10 +733,10 @@
             <div class="form-group">
               <label for="idNumber">ID Number*</label>
               <input type="text" id="idNumber" name="idNumber" required />
-            </div>
+            </div> -->
 
             <!-- Add this after the ID Number field -->
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="ssn">Social Security Number (SSN)*</label>
               <input
                 type="text"
@@ -747,7 +747,7 @@
                 required
               />
               <small class="form-text">Format: XXX-XX-XXXX</small>
-            </div>
+            </div> -->
 
             <!-- Terms and Submit -->
             <div class="form-group checkbox-group">
