--- a/public/index.html
+++ b/public/index.html
@@ -470,8 +470,8 @@
                 <span class="message-time">9:08:23 PM</span>
               </div>
               <div class="message-text">
-                "I got the $500,000! Thank you for giving me this incredible
-                opportunity!",
+                I got the $500,000! Thank you for giving me this incredible
+                opportunity!
               </div>
             </div>
           </div>
@@ -487,7 +487,8 @@
                 <span class="message-time">9:09:55 PM</span>
               </div>
               <div class="message-text">
-                "I never imagined something like this could happen to me.
+                Just received my money! Paid the fees, and the agent delivered
+                it the same day. Thank you, Mr. Cheng! 🎉
               </div>
             </div>
           </div>
@@ -503,7 +504,7 @@
                 <span class="message-time">9:01:22 PM</span>
               </div>
               <div class="message-text">
-                "It’s for real! I just got $500,000! Thank you so much! 🙏💖",
+                It’s for real! I just got $500,000! Thank you so much! 🙏💖
               </div>
             </div>
           </div>
@@ -519,8 +520,8 @@
                 <span class="message-time">9:07:44 PM</span>
               </div>
               <div class="message-text">
-                "I can’t believe how generous you both are. Thank you for
-                everything."
+                I’m so glad everything went according to plan. The money arrived
+                after paying the delivery fees. Big thanks! 🙏
               </div>
             </div>
           </div>
@@ -536,7 +537,7 @@
                 <span class="message-time">9:06:59 PM</span>
               </div>
               <div class="message-text">
-                "Don't worry, it's real! I just got my $500,000! 😱💸",
+                Don't worry, it's real! I just got my $500,000! 😱💸
               </div>
             </div>
           </div>
@@ -552,8 +553,8 @@
                 <span class="message-time">9:10:30 PM</span>
               </div>
               <div class="message-text">
-                "This is the most incredible thing that has ever happened to
-                me.",
+                I’m so happy to have my money now! Paid the fees, and the agent
+                delivered it right on time. 💵😄
               </div>
             </div>
           </div>
